[project]
name = "ha_foobar2k"
version = "0.0.1"
description = "Foobar2000 media player control in Home Assistant - play your music like it is 1999!"
readme = "README.md"
requires-python = "==3.13.1"
dependencies = [
    "aiohttp>=3.9.3",
    "homeassistant>=2025.2.0",
    "pyfoobar2k==0.2.8",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.24.0",
    "pytest-homeassistant-custom-component==0.13.190",
    "pytest-timeout==2.3.1",
    "pytest==8.3.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.4",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git"]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

filterwarnings = [
    "error",
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning",

]